# VKedu-Highload-Webserver_C

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh
conf/: app.conf  httpd_docker.conf  httpd_func.conf  httpd_stress.conf
lib/config_reader/: CMakeLists.txt
lib/config_reader/include/: config_reader.h
lib/config_reader/src/: config_reader.c
lib/cqueue/: CMakeLists.txt
lib/cqueue/include/: cqueue.h  cqueue_internal.h
lib/cqueue/src/: cqueue_create.c  cqueue_destroy.c  cqueue_push.c  cqueue_size.c  cqueue_take.c
lib/http/: CMakeLists.txt
lib/http/include/: http.h  http_internal.h
lib/http/src/: flength.c  fsend_buff.c  fsend_mmap.c  http_check_root_escaping.c  http_close_safe.c  http_close_safe_deb.c  http_config.c  http_content_type.c  http_content_type_magic.c  http_create_full_path.c  http_create_index_path.c  http_create_path.c  http_decode_request.c  http_decode_uri.c  http_file_length.c  http_forbidden.c  http_fsend.c  http_get.c  http_handler.c  http_head.c  http_internal_error.c  http_is_dir.c  http_not_found.c  http_parse_request.c  http_read_request.c  http_setup.c  http_unknown_method.c
lib/logger/: CMakeLists.txt
lib/logger/include/: logger.h
lib/logger/src/: logger.c
lib/server/: CMakeLists.txt
lib/server/include/: server.h  server_internal.h
lib/server/src/: server.c  server_create_sock.c  server_destroy.c  server_init.c  server_run.c  server_stop.c  server_worker.c
lib/thread_pool/: CMakeLists.txt
lib/thread_pool/include/: thread_pool.h  thread_pool_internal.h
lib/thread_pool/src/: thread_pool_add_task.c  thread_pool_destroy.c  thread_pool_init.c  thread_pool_manager.c  thread_pool_run_task.c  thread_pool_wait.c  thread_pool_worker.c
src/: main.c
tests/stress/nginx/: Dockerfile  nginx.conf
